src/styles/index.css
@font-face {
  font-family: 'Knockout';
  src: url('/Knockout-74.otf') format('opentype');
  font-display: swap;
  font-weight: 900;
}

@font-face {
  font-family: 'Knockout';
  src: url('/Knockout-54.otf') format('opentype');
  font-display: swap;
  font-weight: bold;
}

@font-face {
  font-family: 'Knockout';
  src: url('/Knockout-32.otf') format('opentype');
  font-display: swap;
  font-weight: normal;
}

:root {
  --mobile: 768px;
  --blue: #306cf4;
  --red: #ea0000;
  --light-blue: #dbe8f7;
  --mid-blue: #2a95fa;
  --dark-blue: #1d2024;
  --light-green: #00a900;
  --black: #000;
  --white: #fff;
  --transparent: rgba(255, 255, 255, 0);

  --border-color: var(--light-blue);
}

* {
  font-family: 'Knockout', sans-serif;
  box-sizing: border-box;
}

pre {
  display: inline;
  overflow: auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: bold;
  text-transform: uppercase;
}

h1 {
  margin: 2rem 0 1rem 0;
  font-size: 2.25em;
  font-weight: 900;
}

.hero {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
}

.top-hero {
  margin-bottom: 1.5em;
}

.top-hero * {
  margin: 0;
}

@media (min-width: 500px) {
  h1 {
    font-size: 3em;
  }
}

h2 {
  background-clip: text;
  font-size: 2em;
}

h3 {
  font-size: 1.5em;
}

h4 {
  font-size: 1.25em;
}

p,
.p {
  margin-bottom: 2rem;
}

pre {
  display: inline-block;
  color: white;
  background: black;
  margin: 0;
}

form {
  width: 100%;
  display: grid;
  grid-template-columns: auto 75px;
  gap: 0.5em;
}

i {
  cursor: pointer;
}

.login-page {
  max-width: 600px;
}

.login-form form {
  display: flex;
  flex-flow: column;
  gap: 1em;
}

.checkbox {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.checkbox input {
  width: auto;
  margin: 0;
}

.login-error {
  color: var(--red);
  margin: 0;
  text-align: center;
}

.account-header {
  word-break: break-word;
}

.account {
  width: 100%;
  border-top: 1px solid var(--border-color);
}

.account a,
.logout p {
  display: block;
  text-decoration: none !important;
  cursor: pointer;
  margin: 0.5em;
  padding: 0.5em;
  border-radius: 5px;
  white-space: nowrap;
}

.account:hover a,
.logout:hover p {
  background: var(--light-blue);
}

.top.account-page {
  padding: 0;
}

@media (min-width: 768px) {
  .account-page-content {
    display: grid;
    height: 100vh;
    overflow: hidden;
  }
}

.account-top {
  border-bottom: 1px solid var(--border-color);
  padding: 0.775em 1em;
}

.account-top-top {
  display: flex;
  justify-content: space-between;
  gap: 1em;
  text-align: left;
}

.account-top .account-header {
  margin: 0;
}

.account-top .logout p {
  margin: 0;
}

.account-top .info-status {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1em;
}

.account-top .info-status > * {
  margin: 0;
}

@media (min-width: 500px) {
  .account a {
    margin: 17px;
  }
}

.account-conversations {
  display: flex;
  flex-flow: column;
  gap: 1em;
  padding: 1em;
  overflow: auto;
  height: 100%;
}

.account-conversations-header {
  margin-top: 1em;
}

.account-conversation {
  border-radius: 5px;
  border: 1px solid var(--border-color);
  max-width: var(--mobile);
  margin: 0 auto;
}

.account-conversation:hover {
  box-shadow: 1px 5px 10px var(--light-blue);
}

.account-last-login {
  text-align: left;
  margin: 0 0 0.25em;
}

.account-conversation .imessage {
  padding-bottom: 0.5em;
}

.account-conversation-item-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1em;
  padding: 1em;
  border-bottom: 1px solid var(--border-color);
}

.account-conversation-item-header-left {
  text-align: left;
}

.account-conversation-item-header * {
  margin: 0;
}

.account-conversation-item {
  max-height: 300px;
  overflow: auto;
  padding: 0.5em 1em;
}

.input-wrapper {
  display: flex;
  gap: 0.5em;
}

.input-wrapper select {
  flex-basis: 150px;
}

.chat-wrapper.empty {
  display: grid;
  align-items: center;
}

ul,
ol {
  padding: 0;
  margin: 0;
}

ul li,
ol li {
  padding: 0 !important;
  margin-left: 1rem !important;
}

ul p,
ol p {
  padding: 0 !important;
}

input,
textarea,
button,
select {
  display: block;
  padding: 1em;
  background: var(--white);
  border: 1px solid var(--light-blue);
  border-radius: 5px;
  width: 100%;
  font-size: 1rem;
}

button:disabled {
}

button[type='submit'] {
  display: flex;
  align-items: center;
  justify-content: center;
}

textarea {
  resize: none;
}

.select {
  position: relative;
}

.select select {
  padding-right: 1.75em;
  background-color: transparent;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.select:after {
  content: ' ';
  position: absolute;
  top: 50%;
  margin-top: -2px;
  right: 12px;
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 5px solid var(--blue);
}

input:not(.checkbox-input),
textarea,
button {
  appearance: none;
}

input:focus,
textarea:focus,
button:focus {
  border-color: var(--blue);
}

button {
  background: var(--blue);
  color: var(--white);
  cursor: pointer;
}

button:disabled {
  background: var(--light-blue);
}

button:hover:not([disabled]) {
  background: var(--dark-blue);
  border-color: var(--dark-blue);
}

body {
  margin: 0;
  padding: 0;
}

a {
  color: var(--black);
}

.app {
  display: flex;
  flex-flow: column;
  height: 100dvh;
  width: 100%;
  overflow: scroll;
}

.app.force-hide {
  display: none;
}

@media (min-width: 768px) {
  .app.force-hide {
    display: flex;
  }
}

.top {
  flex-grow: 1;
  overflow: scroll;
  padding: 1em;
  margin: 0 auto;
  text-align: center;
  width: 100%;
}

.current-message {
  position: relative;
  padding: 0.5em;
  border-top: 1px solid var(--border-color);
}

.current-message-inner {
  max-width: 800px;
  margin: 0 auto;
}

@media (max-width: 499px) {
  .imessage {
    margin: 0 !important;
  }
}

.app-wrapper {
  display: flex;
  position: relative;
}

.mobile-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky;
  background: var(--white);
  top: 0;
  width: 100%;
  padding-right: 0.5em;
  border-bottom: 1px solid var(--border-color);
  z-index: 2;
}

.left-nav {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  width: 50vw;
  max-width: 350px;
  border-right: 1px solid var(--border-color);
  height: 100dvh;
  overflow: hidden;
}

.mobile-nav-hero {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0.5rem;
  cursor: pointer;
}

@media (min-width: 768px) {
  .mobile-nav .hamburger,
  .app .mobile-nav {
    display: none;
  }
}

.left-nav-header {
  padding: 0 0.5rem;
  margin: 0.5em 0;
}

.left-nav-items {
  padding: 0;
  height: auto;
  flex-grow: 1;
  overflow: auto;
}

@media (min-width: 768px) {
  .left-nav-items {
    padding: 0 0.5rem;
  }
}

.left-nav .conversations {
  overflow: auto;
  height: calc(100dvh - 206px);
}

@media (min-width: 768px) {
  .left-nav .conversations {
    height: calc(100dvh - 220px);
  }
}

.left-nav .conversation {
  padding: 0.5em;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  border-radius: 5px;
  cursor: pointer;
}

.left-nav .conversations .conversation:last-of-type {
  margin-bottom: 0.5em;
}

.new-conversation {
  width: 100%;
  border-bottom: 1px solid var(--border-color);
  padding: 0.5rem;
}

.new-conversation .conversation {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.small-sidebar .new-conversation .conversation {
  justify-content: center;
}

.left-nav .conversation:hover {
  background: var(--light-blue);
}

@media (max-width: 767px) {
  .left-nav {
    display: none;
    width: 100vw;
    max-width: 100vw;
    border-right: none;
  }
}

.left-nav.force-show {
  display: block !important;
}

.force-desktop-hide {
  display: none !important;
}

.small-sidebar {
  display: none;
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  border-right: 1px solid var(--light-blue);
}

.small-sidebar .maximize {
  padding: 0.725em;
}

.sidebar-section {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  align-items: center;
}
.sidebar-section i {
  padding: 0.75em 1rem;
}

.account-sidebar {
  border-top: 1px solid var(--light-blue);
  width: 100%;
}

.account-sidebar i {
  padding: 1.725rem 1rem;
}

@media (min-width: 768px) {
  .small-sidebar {
    display: flex;
  }

  .force-desktop-hide {
    display: block !important;
  }

  .force-hide-desktop,
  .force-show.force-hide-desktop {
    display: none !important;
  }
}

.clear {
  color: rgb(106, 106, 106);
  font-size: 0.9em;
  margin-bottom: 2px;
  cursor: pointer;
}

@media (min-width: 768px) {
  .clear {
    position: absolute;
    top: -1.5rem;
  }
}

.questions {
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 1em;
  overflow: auto;
  padding: 1em 0 0.5em;
  margin: -1em -1em -0.5em;
  text-align: left;
  max-width: 800px;
  margin: 0 auto;
}

.question {
  padding: 1em;
  border-radius: 5px;
  border: 1px solid var(--border-color);
  cursor: pointer;
}

@media (min-width: 500px) {
  .questions {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 900px) {
  .questions {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

.force-show-hide-button {
  padding: 0.5em;
  border-radius: 5px;
  cursor: pointer;
}

.force-show-hide-button:hover {
  background: var(--light-blue);
}

.question:hover,
.question.hover,
.sidebar-item:hover {
  background: var(--light-blue);
  cursor: pointer;
}

.pill {
  padding: 0.4em 0.75em;
  line-height: 1;
  border-radius: 20px;
  background: var(--light-green);
  color: var(--white);
  box-shadow: 1px 5px 10px rgba(255, 255, 255, 0.75);
  text-transform: capitalize;
  opacity: 0.75;
  font-size: 0.85em;
}

.pill.error {
  background: var(--red);
}

